--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -27,26 +27,12 @@ separator-foreground = ${colors.disabled}
 font-0 = MesloLGS Nerd Font:size=12;3
 font-1 = MesloLGS Nerd Font:size=12;1
 font-2 = MesloLGS Nerd Font:size=12;3 
-modules-left = spotify spotify-prev spotify-play-pause spotify-next
-modules-right = memory cpu pulseaudio battery wlan eth
+modules-left = spotify
+modules-right = pulseaudio battery wlan eth
 modules-center = date  
 cursor-click = pointer
 cursor-scroll = ns-resize
 enable-ipc = true
-
-[module/memory]
-type = internal/memory
-interval = 2
-format-prefix = " "
-format-prefix-foreground = ${colors.red}
-label = %percentage_used:2%%
-
-[module/cpu]
-type = internal/cpu
-interval = 2
-format-prefix = " "
-format-prefix-foreground = ${colors.primary}
-label = %percentage:2%%
 
 [module/pulseaudio]
 type = internal/pulseaudio
@@ -129,25 +115,6 @@ format-prefix-foreground = ${colors.og_green}
 format = <label>
 format-foreground = ${colors.og_green}
 exec = ~/.config/polybar/scripts/scroll_spotify_status.sh
-
-[module/spotify-prev]
-type = custom/script
-exec = echo ""
-format = <label>
-click-left = playerctl previous -p spotify
-
-[module/spotify-play-pause]
-type = custom/ipc
-hook-0 = echo ""
-hook-1 = echo ""
-initial = 1
-click-left = playerctl play-pause -p spotify
-
-[module/spotify-next]
-type = custom/script
-exec = echo ""
-format = <label>
-click-left = playerctl next -p spotify
 
 [settings]
 screenchange-reload = true
