changed the spotify module to a better one

--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -26,8 +26,8 @@ separator =
 separator-foreground = ${colors.disabled}
 font-0 = MesloLGS Nerd Font:size=12;3
 font-1 = MesloLGS Nerd Font:size=12;1
-font-2 = MesloLGS Nerd Font:size=12;3 
-modules-left = spotify
+font-2 = Noto Sans Symbols2:size=12;3 
+modules-left = player-mpris-tail
 modules-right = pulseaudio battery wlan eth
 modules-center = date  
 cursor-click = pointer
@@ -105,18 +105,14 @@ date = %a, %b %d%
 label = %date% | %time%
 label-foreground = ${colors.red}
 
-[module/spotify]
-type = custom/script
-tail = true
-interval = 1
-; prefix symbol is shown before the text
-format-prefix = " "
-format-prefix-foreground = ${colors.og_green}
-format = <label>
-format-foreground = ${colors.og_green}
-exec = ~/.config/polybar/scripts/scroll_spotify_status.sh
-
 [settings]
 screenchange-reload = true
+
+[module/player-mpris-tail]
+type = custom/script
+exec = ~/.config/polybar/player-mpris-tail/player-mpris-tail.py -f '{icon} {artist} - {:t15:{title}:}'
+format-foreground = ${colors.og_green}
+click-left = ~/.config/polybar/player-mpris-tail/player-mpris-tail.py play-pause &
+tail = true
 
 ;   
