implemented weather module for polybar

--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -25,11 +25,11 @@ module-margin = 1
 separator =
 separator-foreground = ${colors.disabled}
 font-0 = MesloLGS Nerd Font:size=12;3
-font-1 = MesloLGS Nerd Font:size=12;1
-font-2 = Noto Sans Symbols2:size=12;3 
+font-1 = Noto Sans Symbols2:size=12;3 
+font-2 = Weather Icons:size=12;1
 modules-left = player-mpris-tail
-modules-right = pulseaudio battery wlan eth
-modules-center = date  
+modules-right = openweathermap-simple pulseaudio battery wlan eth
+modules-center = date
 cursor-click = pointer
 cursor-scroll = ns-resize
 enable-ipc = true
@@ -114,5 +114,10 @@ exec = ~/.config/polybar/player-mpris-tail/player-mpris-tail.py -f '{icon} {arti
 format-foreground = ${colors.og_green}
 click-left = ~/.config/polybar/player-mpris-tail/player-mpris-tail.py play-pause &
 tail = true
+
+[module/openweathermap-simple]
+type = custom/script
+exec = ~/.config/polybar/openweathermap-simple/openweathermap-simple.sh
+interval = 600
 
 ;   
