mostly just polybar changes

--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -1,20 +1,19 @@
 [colors]
-background = #171a1f
-foreground = #b6beca
-disabled = #737d8c
-primary = #94f7c5
-red = #fc7b81
-blue = #8cc1ff
-green = #94f7c5
-cyan = #90daff
-magenta = #e2a6ff
-og_green = #00FF00
-reddish_orange = #FF5349
+background = #aa282828
+foreground = #ebdbb2
+red        = #fb4934
+green      = #b8bb26
+yellow     = #fabd2f
+blue       = #83a598
+purple     = #d3869b
+teal       = #8ec07c
+orange     = #fe8019
+disabled   = #a89984
 
 [bar/example]
 width = 100%
 height = 20pt
-radius = 7
+radius = 5
 background = ${colors.background}
 foreground = ${colors.foreground}
 line-size = 3pt
@@ -37,10 +36,10 @@ enable-ipc = true
 [module/pulseaudio]
 type = internal/pulseaudio
 format-volume-prefix = " "
-format-volume-prefix-foreground = ${colors.magenta}
 format-volume = <label-volume>
 label-volume = %percentage%%
 label-muted = ﱝ
+format-volume-foreground = ${colors.orange}
 label-muted-foreground = ${colors.disabled}
 
 [module/battery]
@@ -51,8 +50,9 @@ battery = BAT0
 adapter = ADP1
 interval = 1
 format-charging = <animation-charging> <label-charging>
-format-charging-foreground = ${colors.green}
+format-charging-foreground = ${colors.orange}
 format-discharging = <ramp-capacity>  <label-discharging>
+format-discharging-foreground = ${colors.orange}
 label-charging = %percentage%%
 label-discharging = %percentage%%
 label-full = 
@@ -89,8 +89,10 @@ format-disconnected = <label-disconnected>
 [module/wlan]
 inherit = network-base
 interface-type = wireless
-label-connected = %{F#fafdff}%{F-}
+label-connected = 
 label-disconnected = 睊 
+label-connected-foreground = ${colors.orange}
+label-disconnected-foreground = ${colors.orange}
 
 [module/eth]
 inherit = network-base
@@ -110,8 +112,8 @@ screenchange-reload = true
 
 [module/player-mpris-tail]
 type = custom/script
-exec = ~/.config/polybar/player-mpris-tail/player-mpris-tail.py -f '{icon} {artist} - {:t15:{title}:}'
-format-foreground = ${colors.og_green}
+exec = ~/.config/polybar/player-mpris-tail/player-mpris-tail.py -f '{icon} {:t15:{title}:} | {artist}'
+format-foreground = ${colors.green}
 click-left = ~/.config/polybar/player-mpris-tail/player-mpris-tail.py play-pause &
 tail = true
 
@@ -119,5 +121,4 @@ tail = true
 type = custom/script
 exec = ~/.config/polybar/openweathermap-simple/openweathermap-simple.sh
 interval = 600
-
-;   
+label-foreground = ${colors.orange}
