add menu script to polybar

--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -27,7 +27,7 @@ font-0 = MesloLGS Nerd Font:size=12;3
 font-1 = Noto Sans Symbols2:size=12;3 
 font-2 = Weather Icons:size=12;1
 modules-left = player-mpris-tail
-modules-right = openweathermap-simple pulseaudio battery wlan eth
+modules-right = menu-apps openweathermap-simple pulseaudio battery wlan eth
 modules-center = date
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -109,6 +109,23 @@ label-foreground = ${colors.red}
 
 [settings]
 screenchange-reload = true
+
+[module/menu-apps]
+type = custom/menu
+
+expand-right = false
+
+menu-0-0 = code
+menu-0-0-exec = code
+menu-0-1= discord
+menu-0-1-exex = discord
+menu-0-2 = spotify
+menu-0-2-exec = spotify
+
+label-open = Apps
+label-close = 
+label-separator = " | "
+label-close-foreground = ${colors.red}
 
 [module/player-mpris-tail]
 type = custom/script
