stupid typo preventing discord from running

--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -118,7 +118,7 @@ expand-right = false
 menu-0-0 = code
 menu-0-0-exec = code
 menu-0-1= discord
-menu-0-1-exex = discord
+menu-0-1-exec = discord
 menu-0-2 = spotify
 menu-0-2-exec = spotify
 
