--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -1,5 +1,5 @@
 [colors]
-background = #aa282828
+background = #cc282828
 foreground = #ebdbb2
 red        = #fb4934
 green      = #b8bb26
@@ -12,23 +12,21 @@ disabled   = #a89984
 
 [bar/example]
 width = 100%
-height = 20pt
+height = 24pt
 background = ${colors.background}
 foreground = ${colors.foreground}
-line-size = 3pt
 padding-left = 1
 padding-right = 2
 module-margin = 1
 separator-foreground = ${colors.disabled}
-font-0 = MesloLGS Nerd Font:size=12;3
-font-1 = Noto Sans Symbols2:size=12;3 
-font-2 = Weather Icons:size=12;1
-modules-left = player-mpris-tail
-modules-right = menu-apps openweathermap-simple pulseaudio battery wlan eth
+font-0 = MesloLGS Nerd Font:size=13;3
+modules-left = workspaces player-mpris-tail 
+modules-right = openweathermap-simple backlight pulseaudio battery wlan eth
 modules-center = date
 cursor-click = pointer
 cursor-scroll = ns-resize
 enable-ipc = true
+wm-restack = bspwm
 
 [module/pulseaudio]
 type = internal/pulseaudio
@@ -38,6 +36,13 @@ label-volume = %percentage%%
 label-muted = ﱝ
 format-volume-foreground = ${colors.orange}
 label-muted-foreground = ${colors.disabled}
+
+[module/backlight]
+type = internal/backlight
+card = intel_backlight
+label =  %percentage%%
+format = <label>
+format-foreground = ${colors.orange}
 
 [module/battery]
 type = internal/battery
@@ -107,26 +112,32 @@ label-foreground = ${colors.red}
 [settings]
 screenchange-reload = true
 
-[module/menu-apps]
-type = custom/menu
-
-expand-right = false
-
-menu-0-0 = code
-menu-0-0-exec = code
-menu-0-1= discord
-menu-0-1-exec = discord
-menu-0-2 = spotify
-menu-0-2-exec = spotify
-
-label-open = Apps
-label-close = 
-label-separator = " | "
-label-close-foreground = ${colors.red}
+[module/workspaces]
+type = internal/bspwm
+enable-scroll = false
+ws-icon-0 = term;
+ws-icon-1 = files;
+ws-icon-2 = web;爵
+ws-icon-3 = code;
+ws-icon-4 = music;
+ws-icon-5 = discord;ﭮ
+ws-icon-6 = mail;
+ws-icon-7 = misc;
+format = <label-state>
+label-focused = %icon%
+label-focused-padding = 1
+label-focused-foreground = ${colors.blue}
+label-occupied = %icon%
+label-occupied-padding = 1
+label-occupied-foreground = ${colors.teal}
+label-urgent = %icon%
+label-urgent-padding = 1
+label-empty = %icon%
+label-empty-padding = 1
 
 [module/player-mpris-tail]
 type = custom/script
-exec = ~/.config/polybar/player-mpris-tail/player-mpris-tail.py -f '{icon} {:t15:{title}:} | {artist}'
+exec = ~/.config/polybar/player-mpris-tail/player-mpris-tail.py -f '{icon} {:t15:{title}:}'
 format-foreground = ${colors.green}
 click-left = ~/.config/polybar/player-mpris-tail/player-mpris-tail.py play-pause &
 tail = true
