good commit messages my ass

--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -61,7 +61,9 @@ label-full = 
 label-full-foreground = ${colors.green}
 label-low = 
 ramp-capacity-0 = 
+ramp-capacity-0-foreground = ${colors.red}
 ramp-capacity-1 = 
+ramp-capacity-1-foreground = ${colors.red}
 ramp-capacity-2 = 
 ramp-capacity-3 = 
 ramp-capacity-4 = 
@@ -121,8 +123,10 @@ ws-icon-2 = web;爵
 ws-icon-3 = code;
 ws-icon-4 = music;
 ws-icon-5 = discord;ﭮ
-ws-icon-6 = mail;
-ws-icon-7 = misc;
+ws-icon-6 = slack;
+ws-icon-7 = zoom;
+ws-icon-8 = mail;
+ws-icon-9 = misc;
 format = <label-state>
 label-focused = %icon%
 label-focused-padding = 1
