--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -48,7 +48,6 @@ shadow-exclude = [
   "class_g = 'Conky'",
   "class_g ?= 'Notify-osd'",
   "class_g = 'Cairo-clock'",
-  "class_g = 'Rofi'", 
   "_GTK_FRAME_EXTENTS@:c"
 ];
 
@@ -197,6 +196,7 @@ blur-kern = "3x3box";
 # blur-background-exclude = []
 blur-background-exclude = [
   "window_type = 'desktop'",
+  "class_g = 'slop'",
   "_GTK_FRAME_EXTENTS@:c"
 ];
 
