changed color scheme to something bluish

--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -1,14 +1,8 @@
 [colors]
-background = #cc282828
-foreground = #ebdbb2
-red        = #fb4934
-green      = #b8bb26
-yellow     = #fabd2f
-blue       = #83a598
-purple     = #d3869b
-teal       = #8ec07c
-orange     = #fe8019
-disabled   = #a89984
+background = #222831
+foreground = #EEEEEE
+blue       = #00ADB5
+gray       = #393E46
 
 [bar/example]
 width = 100%
@@ -18,7 +12,6 @@ foreground = ${colors.foreground}
 padding-left = 1
 padding-right = 2
 module-margin = 1
-separator-foreground = ${colors.disabled}
 font-0 = MesloLGS Nerd Font:size=13;3
 modules-left = workspaces player-mpris-tail 
 modules-right = openweathermap-simple backlight pulseaudio battery wlan eth
@@ -34,15 +27,15 @@ format-volume-prefix = " "
 format-volume = <label-volume>
 label-volume = %percentage%%
 label-muted = ﱝ
-format-volume-foreground = ${colors.orange}
-label-muted-foreground = ${colors.disabled}
+format-volume-foreground = ${colors.foreground}
+label-muted-foreground = ${colors.gray}
 
 [module/backlight]
 type = internal/backlight
 card = intel_backlight
 label =  %percentage%%
 format = <label>
-format-foreground = ${colors.orange}
+format-foreground = ${colors.foreground}
 
 [module/battery]
 type = internal/battery
@@ -52,18 +45,18 @@ battery = BAT0
 adapter = ADP1
 interval = 1
 format-charging = <animation-charging> <label-charging>
-format-charging-foreground = ${colors.orange}
+format-charging-foreground = ${colors.foreground}
 format-discharging = <ramp-capacity>  <label-discharging>
-format-discharging-foreground = ${colors.orange}
+format-discharging-foreground = ${colors.foreground}
 label-charging = %percentage%%
 label-discharging = %percentage%%
 label-full = 
-label-full-foreground = ${colors.green}
+label-full-foreground = ${colors.foreground}
 label-low = 
 ramp-capacity-0 = 
-ramp-capacity-0-foreground = ${colors.red}
+ramp-capacity-0-foreground = ${colors.blue}
 ramp-capacity-1 = 
-ramp-capacity-1-foreground = ${colors.red}
+ramp-capacity-1-foreground = ${colors.blue}
 ramp-capacity-2 = 
 ramp-capacity-3 = 
 ramp-capacity-4 = 
@@ -73,6 +66,7 @@ animation-charging-1 = 
 animation-charging-2 = 
 animation-charging-3 = 
 animation-charging-4 = 
+animation-charging-foreground = ${colors.blue}
 animation-charging-framerate = 750
 animation-discharging-0 = 
 animation-discharging-1 = 
@@ -95,8 +89,8 @@ inherit = network-base
 interface-type = wireless
 label-connected = 
 label-disconnected = 睊 
-label-connected-foreground = ${colors.orange}
-label-disconnected-foreground = ${colors.orange}
+label-connected-foreground = ${colors.foreground}
+label-disconnected-foreground = ${colors.blue}
 
 [module/eth]
 inherit = network-base
@@ -109,7 +103,7 @@ interval = 1
 time = %H:%M
 date = %a, %b %d% 
 label = %date% | %time%
-label-foreground = ${colors.red}
+label-foreground = ${colors.foreground}
 
 [settings]
 screenchange-reload = true
@@ -133,16 +127,16 @@ label-focused-padding = 1
 label-focused-foreground = ${colors.blue}
 label-occupied = %icon%
 label-occupied-padding = 1
-label-occupied-foreground = ${colors.teal}
 label-urgent = %icon%
 label-urgent-padding = 1
 label-empty = %icon%
+label-empty-foreground = ${colors.gray}
 label-empty-padding = 1
 
 [module/player-mpris-tail]
 type = custom/script
 exec = ~/.config/polybar/player-mpris-tail/player-mpris-tail.py -f '{icon} {:t15:{title}:}'
-format-foreground = ${colors.green}
+format-foreground = ${colors.foreground}
 click-left = ~/.config/polybar/player-mpris-tail/player-mpris-tail.py play-pause &
 tail = true
 
@@ -150,4 +144,4 @@ tail = true
 type = custom/script
 exec = ~/.config/polybar/openweathermap-simple/openweathermap-simple.sh
 interval = 600
-label-foreground = ${colors.orange}
+label-foreground = ${colors.foreground}
