--- a/config/hypr/keymaps.conf
+++ b/config/hypr/keymaps.conf
@@ -12,15 +12,15 @@ bind = $mainMod, return, exec, $TERMINAL # terminal
 bind = $mainMod SHIFT, return, exec, $TERMINAL -e tmux # terminal with tmux
 bind = $mainMod, B, exec, $BROWSER # browser
 bind = $mainMod, N, exec, $FILES # file manager
-bind = $mainMod, Q, exec, ~/scripts/qr.sh # qr code generator
+bind = $mainMod, Q, exec, ~/dotfiles/scripts/qr.sh # qr code generator
 bind = $mainMod, M, exec, [tile] kitty -e rmpc # music player client
-bind = $mainMod SHIFT, M, exec, ~/scripts/monitors.sh # monitor config
-bind = $mainMod SHIFT, K, exec, ~/scripts/kill_menu.sh # kill menu
+bind = $mainMod SHIFT, M, exec, ~/dotfiles/scripts/monitors.sh # monitor config
+bind = $mainMod SHIFT, K, exec, ~/dotfiles/scripts/kill_menu.sh # kill menu
 bind = $mainMod SHIFT, L, exec, hyprlock # lock screen
 bind = SUPER, V, exec, cliphist list | rofi -dmenu -p "Copy:" -config "~/.config/rofi/clipboard.rasi" | cliphist decode | wl-copy # clipboard manager
-bind = SUPER SHIFT, B, exec, cat ~/scripts/launchers/bookmarks.csv | rofi -dmenu -theme-str 'window {width: 69%;}' -p "Bookmarks:" | awk '{ print $1 }' | tr -d '\n' | wl-copy # bookmarks
-bind = SUPER, W, exec, ~/scripts/wallpaper_picker.sh
-bind = SUPER SHIFT, W, exec, ~/scripts/randomWallpaperSelector.sh
+bind = SUPER SHIFT, B, exec, cat ~/dotfiles/scripts/launchers/bookmarks.csv | rofi -dmenu -theme-str 'window {width: 69%;}' -p "Bookmarks:" | awk '{ print $1 }' | tr -d '\n' | wl-copy # bookmarks
+bind = SUPER, W, exec, ~/dotfiles/scripts/wallpaper_picker.sh
+bind = SUPER SHIFT, W, exec, ~/dotfiles/scripts/randomWallpaperSelector.sh
 
 # window management
 bind = $mainMod, F, fullscreen, 0 # fill whole screen with window
