yum, things will break

--- a/config/hypr/window_rules.conf
+++ b/config/hypr/window_rules.conf
@@ -19,6 +19,7 @@ decoration {
 windowrule = float, class:^(Alacritty)$
 windowrule = float, class:^(kitty)$
 windowrule = size 80% 80%, class:^(kitty)$
+windowrule = fullscreen, title:^(.*fullscreen.*)$
 windowrule = center, class:^(kitty)$
 windowrule = opaque, class:^(firefox)$
 windowrule = opaque, class:^(floorp)$
