--- a/config/hypr/keymaps.conf
+++ b/config/hypr/keymaps.conf
@@ -18,6 +18,7 @@ bind = $mainMod SHIFT, M, exec, ~/dotfiles/scripts/monitors.sh # monitor config
 bind = $mainMod SHIFT, K, exec, ~/dotfiles/scripts/kill_menu.sh # kill menu
 bind = $mainMod SHIFT, L, exec, hyprlock # lock screen
 bind = SUPER, V, exec, cliphist list | rofi -dmenu -p "Copy:" -config "~/.config/rofi/clipboard.rasi" | cliphist decode | wl-copy # clipboard manager
+bind = SUPER, E, exec, cat /home/shasherazi/dotfiles/assets/files/emojis.txt | rofi -dmenu -i -p "Search emoji:" -config "~/.config/rofi/emoji.rasi" | awk '{print $1}' | wl-copy # emoji picker
 bind = SUPER SHIFT, B, exec, cat ~/dotfiles/scripts/launchers/bookmarks.csv | rofi -dmenu -theme-str 'window {width: 69%;}' -p "Bookmarks:" | awk '{ print $1 }' | tr -d '\n' | wl-copy # bookmarks
 bind = SUPER, W, exec, ~/dotfiles/scripts/wallpaper_picker.sh
 bind = SUPER SHIFT, W, exec, ~/dotfiles/scripts/randomWallpaperSelector.sh
