--- a/config/hypr/window_rules.conf
+++ b/config/hypr/window_rules.conf
@@ -16,6 +16,7 @@ decoration {
     dim_strength = 0.2
 }
 
+windowrule = idleinhibit fullscreen, class:.*
 windowrule = float, class:^(Alacritty)$
 windowrule = float, class:^(kitty)$
 windowrule = size 80% 80%, class:^(kitty)$
